--- a/01_tutorial/08_metaprogramming.ipynb
+++ b/01_tutorial/08_metaprogramming.ipynb
@@ -2,6 +2,36 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e86c68d0-640d-417c-b8c7-7437bfbcdd29",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/amenoyoya/julia_ml-tuto/blob/master/01_tutorial/08_metaprogramming.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n",
+    "\n",
+    "Google Colaboratory で本notebookを開く場合は、以下の手順を実行すること\n",
+    "\n",
+    "1. 以下のコマンドを実行し、Julia 1.6.1 Kernel をインストール\n",
+    "2. 「ランタイム」>「ランタイムのタイプを変更」から `Julia 1.6.1` を選択して保存\n",
+    "3. ランタイムが一度切断され、再接続されると Julia 1.6.1 を実行可能になる\n",
+    "    - Google Colaboratory は、セッションの有効時間に制限があるため、実行に時間のかかるコードがある場合は、ローカル環境で環境構築して実行する方が良い"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "390284fa-8247-4d89-bb0f-fe847df92e3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!curl -sSL \"https://julialang-s3.julialang.org/bin/linux/x64/1.6/julia-1.6.1-linux-x86_64.tar.gz\" -o julia.tar.gz\n",
+    "!tar -xzf julia.tar.gz -C /usr --strip-components 1\n",
+    "!rm -rf julia.tar.gz*\n",
+    "!julia -e 'using Pkg; pkg\"add IJulia\"'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4e913c8b-aed4-4a18-90b7-7d455a8c5654",
    "metadata": {},
    "source": [
