--- a/01_tutorial/01_Julia_calculation.ipynb
+++ b/01_tutorial/01_Julia_calculation.ipynb
@@ -135,9 +135,9 @@
       " [1] top-level scope",
       "   @ In[4]:1",
       " [2] eval",
-      "   @ .\\boot.jl:360 [inlined]",
+      "   @ ./boot.jl:360 [inlined]",
       " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base .\\loading.jl:1094"
+      "   @ Base ./loading.jl:1094"
      ]
     }
    ],
@@ -161,14 +161,47 @@
       " [1] top-level scope",
       "   @ In[5]:1",
       " [2] eval",
-      "   @ .\\boot.jl:360 [inlined]",
+      "   @ ./boot.jl:360 [inlined]",
       " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base .\\loading.jl:1094"
+      "   @ Base ./loading.jl:1094"
      ]
     }
    ],
    "source": [
     "try = \"No\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## println 関数\n",
+    "\n",
+    "- `println` 関数は、引数として与えられた値をそのまま出力する（最後に改行を付与する）\n",
+    "- 変数を与えた場合は、変数に紐付けられた値を出力する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# \"Hello\" という文字列を出力する\n",
+    "println(\"Hello\") # => \"Hello\"\n",
+    "\n",
+    "# 変数 x に 値 10 を保存し、それを出力する\n",
+    "x = 10\n",
+    "println(x) # => 10"
    ]
   },
   {
@@ -547,9 +580,9 @@
       " [1] top-level scope",
       "   @ In[19]:3",
       " [2] eval",
-      "   @ .\\boot.jl:360 [inlined]",
+      "   @ ./boot.jl:360 [inlined]",
       " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base .\\loading.jl:1094"
+      "   @ Base ./loading.jl:1094"
      ]
     }
    ],
