--- a/01_tutorial/07_Julia_vector.ipynb
+++ b/01_tutorial/07_Julia_vector.ipynb
@@ -91,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a: Vector{Float64} [5.0e-324, 0.0, 6.89896358286034e-310]\n",
+      "a: Vector{Float64} [5.0e-324, 0.0, 6.9457080311575e-310]\n",
       "z: Vector{Float64} [0.0, 0.0]\n",
       "o: Vector{Float64} [1.0, 1.0, 1.0, 1.0]\n",
       "f: Vector{Float64} [1.23, 1.23, 1.23, 1.23, 1.23]\n"
@@ -188,9 +188,9 @@
      "output_type": "stream",
      "text": [
       "a: 1×3 Matrix{Int64} [1 3 4]\n",
-      "a: 3×1 Vector{Int64} [1, 3, 4]\n",
-      "b: 2×3 Matrix{Int64} [1 2 3; 4 5 6]\n",
-      "c: 2×3 Matrix{Int64} [1 2 3; 4 5 6]\n"
+      "b: 3×1 Vector{Int64} [1, 3, 4]\n",
+      "c: 2×3 Matrix{Int64} [1 2 3; 4 5 6]\n",
+      "d: 2×3 Matrix{Int64} [1 2 3; 4 5 6]\n"
      ]
     }
    ],
@@ -199,14 +199,14 @@
     "println(\"a: $(size(a,1))×$(size(a,2)) $(typeof(a)) $(a)\")\n",
     "\n",
     "b = [1; 3; 4]\n",
-    "println(\"a: $(size(b,1))×$(size(b,2)) $(typeof(b)) $(b)\")\n",
+    "println(\"b: $(size(b,1))×$(size(b,2)) $(typeof(b)) $(b)\")\n",
     "\n",
     "c = [1 2 3; 4 5 6]\n",
-    "println(\"b: $(size(c,1))×$(size(c,2)) $(typeof(c)) $(c)\")\n",
+    "println(\"c: $(size(c,1))×$(size(c,2)) $(typeof(c)) $(c)\")\n",
     "\n",
     "d = [1 2 3\n",
     "    4 5 6]\n",
-    "println(\"c: $(size(d,1))×$(size(d,2)) $(typeof(d)) $(d)\")"
+    "println(\"d: $(size(d,1))×$(size(d,2)) $(typeof(d)) $(d)\")"
    ]
   },
   {
