--- a/01_tutorial/08_metaprogramming.ipynb
+++ b/01_tutorial/08_metaprogramming.ipynb
@@ -1208,9 +1208,238 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5ff9e778",
+   "metadata": {},
+   "source": [
+    "#### プログレスメータの実装\n",
+    "マクロ機能を用いて以下のようなコンソール・プログレスメータを実装してみる\n",
+    "\n",
+    "```julia\n",
+    "@showprogress for i = 1:10\n",
+    "    sleep(1)\n",
+    "end\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "1 / 10 [##                  ] 10%  Time: 00:00:01  ETA: 00:00:09\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a457dfc7-4f28-4599-8cec-ea39770e055f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 / 10 [####################] 100%  Time: 00:00:10.1217239  ETA: 00:00:00"
+     ]
+    }
+   ],
+   "source": [
+    "using Dates, IJulia\n",
+    "\n",
+    "\"\"\"\n",
+    "    mutable struct ProgressMeter\n",
+    "\n",
+    "コンソールにプログレスメータを表示するためのインターフェイス\n",
+    "\n",
+    "- `total::Int`: 処理の合計カウント\n",
+    "- `count::Int`: 現在の処理カウント (0 <= count <= total)\n",
+    "- `start::Number`: 処理開始時間（ナノ秒）\n",
+    "- `progress::Number`: 処理完了率 (0.0 <= progress <= 1.0)\n",
+    "- `elapsed::Number`: 処理の経過時間（ナノ秒）\n",
+    "- `eta::Number`: 残処理の予測必要時間（ナノ秒）\n",
+    "\n",
+    "# Constructors\n",
+    "\n",
+    "    ProgressMeter(total::Int)\n",
+    "\"\"\"\n",
+    "mutable struct ProgressMeter\n",
+    "    total::Int\n",
+    "    count::Int\n",
+    "    start::Number\n",
+    "    progress::Number\n",
+    "    elapsed::Number\n",
+    "    eta::Number\n",
+    "end\n",
+    "\n",
+    "ProgressMeter(total::Int) = ProgressMeter(total, 0, time_ns(), 0.0, 0.0, 0.0)\n",
+    "\n",
+    "\"\"\"\n",
+    "    next!(self::ProgressMeter) ::ProgressMeter\n",
+    "\n",
+    "処理カウンターを進める\n",
+    "\"\"\"\n",
+    "function next!(self::ProgressMeter)\n",
+    "    self.count >= self.total && return self\n",
+    "\n",
+    "    self.count += 1\n",
+    "    self.progress = self.count / self.total\n",
+    "    self.elapsed = time_ns() - self.start\n",
+    "    self.eta = self.elapsed * (1 - self.progress) / self.progress\n",
+    "    self\n",
+    "end\n",
+    "\n",
+    "\"\"\"\n",
+    "    format(self::ProgressMeter) ::AbstractString\n",
+    "\n",
+    "プログレスメータ情報を文字列で取得する\n",
+    "\"\"\"\n",
+    "function format(self::ProgressMeter)\n",
+    "    elapsed = Time(Nanosecond(trunc(Int, self.elapsed)))\n",
+    "    eta = Time(Nanosecond(trunc(Int, self.eta)))\n",
+    "    meterlen = 20\n",
+    "    meter = repeat('#', trunc(Int, self.progress * meterlen)) * repeat(' ', meterlen - trunc(Int, self.progress * meterlen))\n",
+    "    \"$(self.count) / $(self.total) [$meter] $(trunc(Int, self.progress *100))%  Time: $elapsed  ETA: $eta\"\n",
+    "end\n",
+    "\n",
+    "\"\"\"\n",
+    "    output(self::ProgressMeter)\n",
+    "\n",
+    "プログレスメータをコンソールに出力する\n",
+    "\"\"\"\n",
+    "function output(self::ProgressMeter)\n",
+    "    # Clear the console\n",
+    "    IJulia.clear_output()\n",
+    "\n",
+    "    # Output the progress meter.\n",
+    "    write(stdout, \"\\r$(format(self))\")\n",
+    "    flush(stdout)\n",
+    "end\n",
+    "\n",
+    "########\n",
+    "# test #\n",
+    "########\n",
+    "ary = Vector{Int}(1:10)\n",
+    "prog = ProgressMeter(length(ary))\n",
+    "for a in ary\n",
+    "    sleep(1)\n",
+    "    next!(prog)\n",
+    "    output(prog)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8678847e",
+   "metadata": {},
+   "source": [
+    "以下のような式展開を行う `@showprogress` マクロを実装する\n",
+    "\n",
+    "```julia\n",
+    "@showprogress for `<variable> <\"in\"|\"=\"> <iterator>`\n",
+    "    `<for-body>`\n",
+    "end\n",
+    "\n",
+    "#### after expansion ####\n",
+    "progress = ProgressMeter(length($iterator))\n",
+    "for `<variable> <\"in\"|\"=\"> <iterator>`\n",
+    "    `<for-body>`\n",
+    "    next!(progress)\n",
+    "    output(progress)\n",
+    "end\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8db33a7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":((function ()\n",
+       "      \u001b[90m#= In[7]:27 =#\u001b[39m\n",
+       "      \u001b[90m#= In[7]:28 =#\u001b[39m\n",
+       "      progress = ProgressMeter(length(ary))\n",
+       "      \u001b[90m#= In[7]:29 =#\u001b[39m\n",
+       "      for a = ary\n",
+       "          \u001b[90m#= In[7]:38 =#\u001b[39m\n",
+       "          sleep(1)\n",
+       "          next!(progress)\n",
+       "          output(progress)\n",
+       "      end\n",
+       "  end)())"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "macro showprogress(forExpr)\n",
+    "    \"\"\"\n",
+    "    for {args[1] = {{args[1]} {head} {args[2]}}}\n",
+    "        {args[2] = {\n",
+    "            ...\n",
+    "        }}\n",
+    "    end\n",
+    "    \"\"\"\n",
+    "    # validation: forExpr は for 式である必要がある\n",
+    "    if forExpr.head !== :for\n",
+    "        throw(ArgumentError(\"@showprogress requires for-loop expression.\"))\n",
+    "    end\n",
+    "\n",
+    "    # ループ回数取得用のIterator: `for {args[1] = {{args[1]} {head} {args[2]}}} ... end` => args[1].args[2]\n",
+    "    iterator = forExpr.args[1].args[2]\n",
+    "\n",
+    "    # for-loop ブロックの最後にプログレスメータ更新・表示用のコードを挿入\n",
+    "    append!(forExpr.args[2].args, [\n",
+    "        :(next!(progress)),\n",
+    "        :(output(progress))\n",
+    "    ])\n",
+    "\n",
+    "    # 最終的に展開するコード: `progress = ProgressMeter(length($iterator)); for {for-expression} {for-body; next!(progress); output(progress)} end`\n",
+    "    ## コードは、マクロのスコープ状態に影響を受けないように `esc` でエスケープする必要がある\n",
+    "    ### エスケープしない場合: 例えばこのマクロが module Mod ... end で囲まれていた場合 `Mod.progress = Mod.ProgressMeter(); ...` のように変換されてしまう\n",
+    "    ## \"progress\" 変数がグローバルスコープで生成されないように function ブロックで囲む\n",
+    "    :((function()\n",
+    "        progress = ProgressMeter(length($iterator))\n",
+    "        $forExpr\n",
+    "    end)()) |> esc\n",
+    "end\n",
+    "\n",
+    "#####################\n",
+    "# macro expand test #\n",
+    "#####################\n",
+    "ary = Vector{Int}(1:10)\n",
+    "@macroexpand @showprogress for a in ary\n",
+    "    sleep(1)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "38f5ea4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 / 10 [####################] 100%  Time: 00:00:10.0639066  ETA: 00:00:00"
+     ]
+    }
+   ],
+   "source": [
+    "@showprogress for a in ary\n",
+    "    sleep(1)\n",
+    "end"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a457dfc7-4f28-4599-8cec-ea39770e055f",
+   "id": "81e002a6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1218,15 +1447,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.1",
+   "display_name": "Julia 1.7.2",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.1"
+   "version": "1.7.2"
   }
  },
  "nbformat": 4,
