🐛 fix: Julia_task

--- a/01_tutorial/09_Julia_task.ipynb
+++ b/01_tutorial/09_Julia_task.ipynb
@@ -337,13 +337,18 @@
     "    - このチャンネルは `T` 型の値だけを保持でき、型を指定しないと任意の型のオブジェクトを保持するチャンネルが作成される\n",
     "    - `sz` は任意の時点でチャンネルが保持できる最大の要素数を表す\n",
     "        - 例えば `Channel(32)` は任意の型のオブジェクトを 32 個まで同時に保持できるチャンネルを作成し、`Channel{MyType}(64)` は MyType 型のオブジェクトを 64 個まで同時に保持できるチャンネルを作成する\n",
+    "        - 指定しない場合 or 0 を指定した場合 は無制限になる\n",
     "- Channel が空だと、読み込み (`take!` の呼び出し) は、データが利用可能になるまでブロックされる\n",
     "- Channel が満杯だと、書き込み (`put!` の呼び出し) は、空間が空くまでブロックされる\n",
     "- `isready` を使うとチャンネルにオブジェクトが存在するかどうかを確認できる\n",
     "- `wait` を使うとオブジェクトが利用可能になるまで待機できる\n",
     "- Channel は最初開いている\n",
     "    - これは `take!` と `put!` を使って自由にデータを読み書きできることを意味する\n",
-    "- `close` を使うと Channel と閉じることができ、閉じられた Channel に対する `put!` は失敗する"
+    "    - `put!` はチャンネルにデータを追加する\n",
+    "        - `Channel.sz_max` を超える数のデータは追加できないため、追加可能になるまでプログラムがブロックされる\n",
+    "    - `take!` はチャンネルからデータを取り出し、取り出したデータはチャンネルから削除される\n",
+    "        - また `take!` で取得可能なデータがない場合は、取得可能になるまでプログラムがブロックされる\n",
+    "- `close` を使うと Channel と閉じることができ、閉じられた Channel に対する `put!`, `take!` は失敗する"
    ]
   },
   {
@@ -354,7 +359,7 @@
     {
      "data": {
       "text/plain": [
-       "Task (runnable) @0x000000000bc007d0"
+       "Task (runnable) @0x000000000bef07d0"
       ]
      },
      "execution_count": 1,
@@ -363,24 +368,36 @@
     }
    ],
    "source": [
-    "# String型の値を無制限に保持可能なチャンネル\n",
-    "c_in = Channel{String}()\n",
+    "# String型の値を1つ保持可能なチャンネル\n",
+    "c_in = Channel{String}(1)\n",
     "\n",
-    "# 任意の値を無制限に保持可能なチャンネル\n",
-    "c_out = Channel()\n",
+    "# 任意の値を1つ保持可能なチャンネル\n",
+    "c_out = Channel(1)\n",
+    "\n",
+    "# チャンネルに保持されているデータが一杯かどうか判定する関数\n",
+    "isfull(c::Channel) = c.sz_max === 0 ? false : length(c.data) >= c.sz_max\n",
     "\n",
     "# 非同期に実行されるループ処理: c_in, c_out チャンネルを通してデータのやり取りが可能\n",
     "task = @async begin\n",
     "    while true\n",
-    "        command = take!(c_in)\n",
+    "        # take!() によるプログラムの停止を避けたい場合は、チャンネルにデータが登録されているか確認した方が良い\n",
+    "        # command = isempty(c_in.data) ? nothing : take!(c_in)\n",
+    "        command = isempty(c_in) ? nothing : take!(c_in)\n",
+    "\n",
     "        if command === \"exit\"\n",
     "            break\n",
     "        elseif command === \"print\"\n",
     "            println(\"Hello\")\n",
     "            flush(stdout)\n",
-    "        else\n",
-    "            put!(c_out, \"get command: $command\")\n",
+    "        elseif command !== nothing\n",
+    "            # put!() によるプログラムの停止を避けたい場合は、チャンネルに空きがあるか確認した方が良い\n",
+    "            if !isfull(c_out)\n",
+    "                put!(c_out, \"get command: $command\")\n",
+    "            end\n",
     "        end\n",
+    "\n",
+    "        # take!, put! によるプログラムブロックがない場合、Task 作成時にフリーズを起こすため、必ず sleep を入れる\n",
+    "        sleep(0.1)\n",
     "    end\n",
     "end"
    ]
@@ -391,13 +408,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "\"print\""
@@ -406,6 +416,13 @@
      "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
     }
    ],
    "source": [
@@ -441,14 +458,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current task: Task (runnable) @0x000000000e5c5d20\n",
+      "current task: Task (runnable) @0x000000000e8b9d20\n",
       "is task started: true\n",
       "is task done: false\n"
      ]
@@ -470,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +496,7 @@
        "true"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,6 +505,9 @@
     "# c_in チャンネルに \"exit\" データを送信\n",
     "## => タスクは終了するはず\n",
     "put!(c_in, \"exit\")\n",
+    "\n",
+    "# タスク終了までタイムラグがある可能性があるため 0.5 秒待機\n",
+    "sleep(0.5)\n",
     "\n",
     "# タスクは終了しているはずのため istaskdone => true\n",
     "istaskdone(task)"
