--- a/04_reinforcement-learning/test-cartpole-env.ipynb
+++ b/04_reinforcement-learning/test-cartpole-env.ipynb
@@ -340,7 +340,7 @@
     "recordscene = Observable(plot(env, Val(0)))\n",
     "push!(scene.children, recordscene[])\n",
     "\n",
-    "record(scene, \"04-cartpole-test.gif\", framerate = 30) do io\n",
+    "record(scene, \"test-cartpole-env.gif\", framerate = 30) do io\n",
     "    while !is_terminated(env)\n",
     "        action = rand((Val(-1), Val(+1)))\n",
     "        step!(env, action)\n",
