--- a/04_reinforcement-learning/04-maze.ipynb
+++ b/04_reinforcement-learning/04-maze.ipynb
@@ -75,7 +75,7 @@
     "    - `state_action_history[n].action`: エージェントがとった行動\n",
     "- `reward::Union{Nothing, Number}`: ゴール地点に到達したときにステップ数の逆数の報酬を与える\n",
     "\"\"\"\n",
-    "Base.Base.@kwdef mutable struct MazeEnv <: AbstractEnv\n",
+    "Base.@kwdef mutable struct MazeEnv <: AbstractEnv\n",
     "    agent_pos::Int = Int(S0)\n",
     "    state_action_history::Vector{NamedTuple} = Vector{NamedTuple}()\n",
     "    reward::Union{Nothing, Number} = nothing\n",
