🍱 add: task error handling

--- a/01_tutorial/09_Julia_task.ipynb
+++ b/01_tutorial/09_Julia_task.ipynb
@@ -514,6 +514,147 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## タスクのエラー処理\n",
+    "\n",
+    "タスクは並列実行されるため、エラーが発生しても分からないことが多い\n",
+    "\n",
+    "そのため、ログファイルにエラーログを書き込むようにすると良い\n",
+    "\n",
+    "Julia デフォルトの `SimpleLogger(io::IOStream)` を使っても良いが、ログファイルのローテーション機能が使える `LogRoller.jl` パッケージが便利である"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `C:\\Users\\user\\.julia\\registries\\General.toml`\n",
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `C:\\Users\\user\\.julia\\environments\\v1.7\\Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `C:\\Users\\user\\.julia\\environments\\v1.7\\Manifest.toml`\n"
+     ]
+    }
+   ],
+   "source": [
+    "using Pkg\n",
+    "Pkg.add(\"LogRoller\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Base.CoreLogging.SimpleLogger(IJulia.IJuliaStdio{Base.PipeEndpoint}(IOContext(Base.PipeEndpoint(Base.Libc.WindowsRawSocket(0x00000000000003e8) open, 0 bytes waiting))), Info, Dict{Any, Int64}())"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "using Logging, LogRoller\n",
+    "\n",
+    "\"\"\"\n",
+    "グローバルロガー: RollingLogger\n",
+    "- ファイル名: \"./error.log\"\n",
+    "- ファイル上限サイズ: 1MB (1,000,000 bytes) ※このサイズを超えるとローテーションされる\n",
+    "- バックアップするローテーション数: 3\n",
+    "- ログレベル: Error\n",
+    "\"\"\"\n",
+    "# global_logger(::Logger): グローバルロガーを設定する\n",
+    "global_logger(\n",
+    "    RollingLogger(\"./error.log\", 1_000_000, 3, Logging.Error)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "タスクのエラー処理は基本的に以下のような形で記述しておけば問題ない\n",
+    "\n",
+    "```julia\n",
+    "task = @async try\n",
+    "    # some process.\n",
+    "catch err\n",
+    "    # @error マクロの第2引数に `exception=(err, catch_backtrace())`\n",
+    "    #   を指定するとエラーメッセージをすべてログに残すことができる\n",
+    "    @error \"Error occurred\" exception=(err, catch_backtrace())\n",
+    "\n",
+    "    # rethrow() で現在のエラーを再度投げてプロセスを終了させる\n",
+    "    rethrow()\n",
+    "end\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Task (failed) @0x000000000b37b650\n",
+       "UndefVarError: printxyz not defined\n",
+       "Stacktrace:\n",
+       " [1] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
+       "\u001b[90m   @ \u001b[39m\u001b[90m.\\\u001b[39m\u001b[90m\u001b[4mIn[7]:4\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+       " [2] \u001b[0m\u001b[1m(::var\"#1#2\")\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[0m\u001b[1m)\u001b[22m\n",
+       "\u001b[90m   @ \u001b[39m\u001b[35mMain\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4mtask.jl:423\u001b[24m\u001b[39m"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# エラーが発生するタスク\n",
+    "task = @async try\n",
+    "    for i = 1:10\n",
+    "        printxyz(i) # <= error: undef function\n",
+    "        sleep(10)\n",
+    "    end\n",
+    "catch err\n",
+    "    @error \"Error:\" exception=(err, catch_backtrace())\n",
+    "    rethrow()\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "istaskdone(task)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
