🍱 add: tutorial/RPG

--- a/04_reinforcement-learning/pytorch/01_04-framework.ipynb
+++ b/04_reinforcement-learning/pytorch/01_04-framework.ipynb
@@ -97,7 +97,7 @@
     }
    ],
    "source": [
-    "using ReinforcementLearning, NaNStatistics, Distributions\n",
+    "using NaNStatistics, Distributions\n",
     "\n",
     "\"エージェントの行動: 上、右、下、左移動\"\n",
     "@enum MazeAction UP=1 RIGHT DOWN LEFT\n",
@@ -106,38 +106,34 @@
     "@enum MazeState S0=1 S1 S2 S3 S4 S5 S6 S7 S8\n",
     "\n",
     "\"迷路問題環境モデル\"\n",
-    "Base.@kwdef mutable struct MazeEnv <: AbstractEnv\n",
+    "Base.@kwdef mutable struct MazeEnv\n",
     "    state::Int = Int(S0) # 現在の状態 = エージェント位置\n",
     "    reward::Union{Nothing, <:Number} = nothing # 報酬\n",
-    "    state_action_history::Vector{NamedTuple} = [] # エージェントの行動記録\n",
     "end\n",
     "\n",
     "\"状態空間: 環境モデル内のすべての状態\"\n",
-    "RLBase.state_space(env::MazeEnv) ::Tuple = Int.(instances(MazeState))\n",
+    "state_space(env::MazeEnv) = Int.(instances(MazeState))\n",
     "\n",
     "\"行動空間: エージェントがとりうるすべての行動\"\n",
-    "RLBase.action_space(env::MazeEnv) ::Tuple = Int.(instances(MazeAction))\n",
+    "action_space(env::MazeEnv) = Int.(instances(MazeAction))\n",
     "\n",
     "\"現在の状態\"\n",
-    "RLBase.state(env::MazeEnv) ::Int = env.state\n",
+    "state(env::MazeEnv) = env.state\n",
     "\n",
     "\"報酬: エージェントがゴールしない限り報酬は 0\"\n",
-    "RLBase.reward(env::MazeEnv) ::Int = isnothing(env.reward) ? 0 : env.reward\n",
+    "reward(env::MazeEnv) = isnothing(env.reward) ? 0 : env.reward\n",
     "\n",
     "\"終了条件: 報酬が得られたとき（エージェントがゴールしたとき）\"\n",
-    "RLBase.is_terminated(env::MazeEnv) ::Bool = !isnothing(env.reward)\n",
+    "is_terminated(env::MazeEnv) = !isnothing(env.reward)\n",
     "\n",
     "\"環境モデル初期化\"\n",
-    "RLBase.reset!(env::MazeEnv) = begin\n",
+    "reset!(env::MazeEnv) = begin\n",
     "    env.state = Int(S0)\n",
     "    env.reward = nothing\n",
     "end\n",
     "\n",
     "\"1step の実行処理\"\n",
     "(env::MazeEnv)(action::Int) = begin\n",
-    "    # 行動記録\n",
-    "    push!(env.state_action_history, (state = state(env), action = action))\n",
-    "\n",
     "    # 状態遷移表\n",
     "    state_map = Dict(\n",
     "        Int(UP)    => -3,\n",
@@ -149,7 +145,6 @@
     "\n",
     "    # ゴールしたとき報酬 1 を与える\n",
     "    if env.state === Int(S8)\n",
-    "        push!(env.state_action_history, (state = Int(S8), action = NaN))\n",
     "        env.reward = 1\n",
     "    end\n",
     "end\n",
