🍱 add: 型システム設計

--- a/01_tutorial/RPG/04_01-io.ipynb
+++ b/01_tutorial/RPG/04_01-io.ipynb
@@ -529,7 +529,7 @@
     "\n",
     "なお、`test` ディレクトリは `Pkg.generate()` 関数では作られないため、自分で作成する必要がある（`Manifest.toml` は依存パッケージインストール時に自動で作成される）\n",
     "\n",
-    "今回は、[04](./04) ディレクトリに、プロジェクト名（パッケージ名）: `RPG` としてパッケージを作成する"
+    "今回は、[04_01](./04_01) ディレクトリに、プロジェクト名（パッケージ名）: `RPG` としてパッケージを作成する"
    ]
   },
   {
@@ -540,10 +540,10 @@
    "source": [
     "using Pkg\n",
     "\n",
-    "# カレントディレクトリに 04 ディレクトリがなければ\n",
-    "## 04 ディレクトリ作成して RPG パッケージテンプレート配置\n",
-    "if !isdir(\"./04\")\n",
-    "    Pkg.generate(\"./04/RPG\")\n",
+    "# カレントディレクトリに 04_01 ディレクトリがなければ\n",
+    "## 04_01 ディレクトリ作成して RPG パッケージテンプレート配置\n",
+    "if !isdir(\"./04_01\")\n",
+    "    Pkg.generate(\"./04_01/RPG\")\n",
     "end"
    ]
   },
@@ -562,15 +562,15 @@
     "\n",
     "現状 RPG ゲームに必要なデータを整理すると以下のようになる\n",
     "\n",
-    "- [ゲーム](./04/RPG/src/struct/Game.jl)\n",
+    "- [ゲーム](./04_01/RPG/src/struct/Game.jl)\n",
     "    - `勇者::キャラクター`\n",
     "    - `モンスター::キャラクター`\n",
-    "- [キャラクター](./04/RPG/src/struct/Character.jl)\n",
+    "- [キャラクター](./04_01/RPG/src/struct/Character.jl)\n",
     "    - `名前::String`\n",
     "    - `HP::Int`\n",
     "    - `攻撃力::Int`\n",
     "    - `防御力::Int`\n",
-    "- [コマンド](./04/RPG/src/Command.jl)\n",
+    "- [コマンド](./04_01/RPG/src/Command.jl)\n",
     "    - 攻撃 (1)\n",
     "    - 大振り (2)"
    ]
@@ -713,7 +713,7 @@
    "metadata": {},
    "source": [
     "### テストの実行\n",
-    "[テストコード](./04/RPG/test/runtests.jl) を記述し、テストコードを通すための最低限のプログラムコードを実装したら、自動テストを実行する\n",
+    "[テストコード](./04_01/RPG/test/runtests.jl) を記述し、テストコードを通すための最低限のプログラムコードを実装したら、自動テストを実行する\n",
     "\n",
     "これまでは、グローバルプロジェクトでテストを実行していたため、Test パッケージはデフォルトで入っていた\n",
     "\n",
@@ -732,24 +732,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `d:\\github\\julia_ml-tuto\\01_tutorial\\RPG\\04\\RPG`\n",
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `d:\\github\\julia_ml-tuto\\01_tutorial\\RPG\\04_01\\RPG`\n",
       "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `C:\\Users\\user\\.julia\\registries\\General.toml`\n",
       "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `D:\\github\\julia_ml-tuto\\01_tutorial\\RPG\\04\\RPG\\Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `D:\\github\\julia_ml-tuto\\01_tutorial\\RPG\\04\\RPG\\Manifest.toml`\n"
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `D:\\github\\julia_ml-tuto\\01_tutorial\\RPG\\04_01\\RPG\\Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `D:\\github\\julia_ml-tuto\\01_tutorial\\RPG\\04_01\\RPG\\Manifest.toml`\n",
+      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m project...\n",
+      "\u001b[32m  ✓ \u001b[39mRPG\n",
+      "  1 dependency successfully precompiled in 1 seconds\n"
      ]
     }
    ],
    "source": [
-    "# プロジェクト環境を ./04/RPG/ に切り替え\n",
-    "Pkg.activate(\"./04/RPG\")\n",
+    "using Pkg\n",
+    "\n",
+    "# プロジェクト環境を ./04_01/RPG/ に切り替え\n",
+    "Pkg.activate(\"./04_01/RPG\")\n",
     "\n",
     "# Test パッケージのインストール\n",
     "## => Project.toml, Manifest.toml に必要な情報が記述される\n",
@@ -758,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -792,11 +797,11 @@
      "output_type": "stream",
      "text": [
       "\u001b[32m\u001b[1m     Testing\u001b[22m\u001b[39m RPG\n",
-      "\u001b[32m\u001b[1m      Status\u001b[22m\u001b[39m `C:\\Users\\user\\AppData\\Local\\Temp\\jl_E9OTKe\\Project.toml`\n",
-      " \u001b[90m [b4d49c43] \u001b[39mRPG v0.1.0 `D:\\github\\julia_ml-tuto\\01_tutorial\\RPG\\04\\RPG`\n",
+      "\u001b[32m\u001b[1m      Status\u001b[22m\u001b[39m `C:\\Users\\user\\AppData\\Local\\Temp\\jl_BT0jdV\\Project.toml`\n",
+      " \u001b[90m [b4d49c43] \u001b[39mRPG v0.1.0 `D:\\github\\julia_ml-tuto\\01_tutorial\\RPG\\04_01\\RPG`\n",
       " \u001b[90m [8dfed614] \u001b[39mTest `@stdlib/Test`\n",
-      "\u001b[32m\u001b[1m      Status\u001b[22m\u001b[39m `C:\\Users\\user\\AppData\\Local\\Temp\\jl_E9OTKe\\Manifest.toml`\n",
-      " \u001b[90m [b4d49c43] \u001b[39mRPG v0.1.0 `D:\\github\\julia_ml-tuto\\01_tutorial\\RPG\\04\\RPG`\n",
+      "\u001b[32m\u001b[1m      Status\u001b[22m\u001b[39m `C:\\Users\\user\\AppData\\Local\\Temp\\jl_BT0jdV\\Manifest.toml`\n",
+      " \u001b[90m [b4d49c43] \u001b[39mRPG v0.1.0 `D:\\github\\julia_ml-tuto\\01_tutorial\\RPG\\04_01\\RPG`\n",
       " \u001b[90m [2a0f44e3] \u001b[39mBase64 `@stdlib/Base64`\n",
       " \u001b[90m [b77e0a4c] \u001b[39mInteractiveUtils `@stdlib/InteractiveUtils`\n",
       " \u001b[90m [56ddb016] \u001b[39mLogging `@stdlib/Logging`\n",
