--- a/04_reinforcement-learning/pytorch/01_01-maze.ipynb
+++ b/04_reinforcement-learning/pytorch/01_01-maze.ipynb
@@ -461,9 +461,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.2",
+   "display_name": "Julia 1.7 with sysimage 1.7.2",
    "language": "julia",
-   "name": "julia-1.7"
+   "name": "julia-1.7-with-sysimage-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
