🐛 fix: MakieSysImage installation

--- a/etc/visualization/makie/MakieSysImage.ipynb
+++ b/etc/visualization/makie/MakieSysImage.ipynb
@@ -145,9 +145,29 @@
     "\n",
     "# installkernel(kernel_name::String, kernel_option::String)\n",
     "## --sysimage オプション: 読み込む sysimage を絶対パスで指定\n",
-    "installkernel(\"Julia 1.7 with sysimage\", \"--sysimage=$(outputfile)\")\n",
+    "installkernel(\"Julia 1.7 with sysimage\", \"--sysimage=$(outputfile)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以降 `Julia 1.7 with sysimage` カーネルを利用すれば GLMakie を高速起動できる\n",
     "\n",
-    "# => 以降 Julia 1.7 with sysimage カーネルを利用すれば GLMakie を高速起動できる"
+    "VSCode Jupyter 環境で `Julia 1.7 with sysimage` が選択肢に現れない場合は、以下のコマンドを打って環境更新する\n",
+    "\n",
+    "```bash\n",
+    "# pyenv 環境更新\n",
+    "$ pyenv rehash\n",
+    "\n",
+    "# Jupyter カーネルリスト確認\n",
+    "$ jupyter kernelspec list\n",
+    "\n",
+    "Available kernels:\n",
+    "  julia-1.7                      ~/.jupyter/kernels/julia-1.7\n",
+    "  julia-1.7-with-sysimage-1.7    ~/.jupyter/kernels/julia-1.7-with-sysimage-1.7\n",
+    "  python3                        ~/.pyenv/pyenv-win/versions/3.8.10/share/jupyter/kernels/python3\n",
+    "```"
    ]
   },
   {
@@ -197,15 +217,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7 with sysimage 1.7.2",
+   "display_name": "Julia 1.7.3",
    "language": "julia",
-   "name": "julia-1.7-with-sysimage-1.7"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.2"
+   "version": "1.7.3"
   },
   "orig_nbformat": 4
  },
